# llm_tutorial

./: 01_chat.ipynb  02_rag_ollama.ipynb  03_rag_openai.ipynb  04_function_calling_langchain.ipynb  05_function_calling_openai.ipynb  06_function_calling_langchain2.ipynb  07_function_calling_openai2.ipynb  08_function_calling_langchain.ipynb  09_langchain_example.ipynb  10_langgraph_example.ipynb  11_langgraph_chatbot.ipynb  12_langgraph_tool.ipynb  13_langgraph_tool_simple.ipynb  14_langgraph_memory.ipynb  15_langchain_SQLDatabase_toolkit.ipynb  16_get_youbike_api.ipynb  17_get_twse_stock_price.ipynb  18_get_mops_revenue.ipynb  19_get_mops_income_report.ipynb  20_get_mops_material_info.ipynb  22_get_udn_news.ipynb  23_get_nsysu_class.ipynb  24_selenium_google.ipynb  25_selenium_mm.ipynb  26_auto_parser.py  README.md  auto_parser.bat  chat_app.py  pyproject.toml  requirements.txt
