[project]
name = "llm-tutorial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.1.0",
    "langchain>=0.3.27",
    "langchain-classic>=1.0.0",
    "langchain-community>=0.3.30",
    "langchain-core>=1.0.4",
    "langchain-ollama>=0.3.8",
    "langchain-openai>=0.3.33",
    "langgraph>=0.6.7",
    "psycopg2>=2.9.11",
    "python-dotenv>=1.1.1",
    "streamlit>=1.50.0",
    "ta>=0.11.0",
    "yfinance>=0.2.66",
]
