[project]
name = "llm-tutorial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "certifi>=2025.11.12",
    "chromadb>=1.3.5",
    "ipykernel>=7.1.0",
    "langchain>=1.1.2",
    "langchain-classic>=1.0.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.1.1",
    "langchain-ollama>=1.0.0",
    "langchain-openai>=1.1.0",
    "langgraph>=1.0.4",
    "lxml>=6.0.2",
    "psycopg2>=2.9.11",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "selenium>=4.39.0",
    "streamlit>=1.52.1",
    "ta>=0.11.0",
    "undetected-chromedriver>=3.5.5",
    "webdriver-manager>=4.0.2",
    "yfinance>=0.2.66",
]
